--- a/newsletter/templates/newsletter/message_list.html
+++ b/newsletter/templates/newsletter/message_list.html
@@ -2,17 +2,18 @@
 {% block title %} Ваши сообщения {% endblock %}
 {% block content %}
     <a class="btn btn-outline-success" href="{% url 'newsletter:message_create' %}">Добавление сообщения</a>
-
-    {% for object in object_list %}
-        <div class="col">
-            <div class="card shadow-sm">
-                <div class="card-body">
-                    <p class="card-text">Тема письма: {{ object.subject }} </p>
-                    <p class="card-text">Содержание: {{ object.text }} </p>
-                    <p class="card-text">Владелец: {{ object.owner|default:'Нет владельца' }} </p>
-                    <a href="{% url 'newsletter:message_detail' object.pk %}">Информация о сообщении</a>
+    {% if user.is_authenticated %}
+        {% for object in object_list %}
+            <div class="col">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <p class="card-text">Тема письма: {{ object.subject }} </p>
+                        <p class="card-text">Содержание: {{ object.text }} </p>
+                        <p class="card-text">Владелец: {{ object.owner|default:'Нет владельца' }} </p>
+                        <a href="{% url 'newsletter:message_detail' object.pk %}">Информация о сообщении</a>
+                    </div>
                 </div>
             </div>
-        </div>
-    {% endfor %}
+        {% endfor %}
+    {% endif %}
 {% endblock %}
